--- a/src/app/components/pets/confirma-dialog/confirma-dialog.component.css
+++ b/src/app/components/pets/confirma-dialog/confirma-dialog.component.css
@@ -15,7 +15,7 @@
         height: 100%;
         width: 100%;
 
-        img {
+        :is(img) {
             width: 180px;
             height: auto;
         }
@@ -29,7 +29,7 @@
         padding: 20px;
         gap: 10px;
 
-        p {
+        :is(p) {
             width: 100%;
             text-align: center;
             margin: 0;
