--- a/src/app/components/pets/info-pet/info-pet.component.css
+++ b/src/app/components/pets/info-pet/info-pet.component.css
@@ -22,13 +22,13 @@
     display: flex;
     flex-direction: column;
 
-    h2,
-    h3 {
+    :is(h2),
+    :is(h3) {
         margin: 0;
     }
 }
 
-.pet-info h4 {
+.pet-info :is(h4) {
     display: flex;
     justify-content: space-between;
     flex-direction: row;
@@ -37,7 +37,7 @@
     font-weight: bold;
     font-size: 14px;
 
-    span {
+    :is(span) {
         font-weight: normal;
         font-size: 14px;
     }
