--- a/src/app/components/pets/pets.component.html
+++ b/src/app/components/pets/pets.component.html
@@ -30,6 +30,7 @@
             </div>
         </div>
     </div>
-    
+
 </div>
-<button mat-button class="add-btn" (click)="addNewPet()"><i class="fa-solid fa-plus"></i><span>Adicionar Novo Pet</span></button>
+<button mat-button class="add-btn" (click)="addNewPet()"><i class="fa-solid fa-plus"></i><span>Adicionar Novo
+        Pet</span></button>
