--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -1,7 +1,17 @@
+.feed-content {
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
+    overflow-y: auto;
+    gap: 15px;
+    padding: 20px;
+}
+
 .post {
     display: flex;
+    flex-direction: column;
     width: 100%;
-    padding: 1rem;
+    padding: .5rem;
     background: white;
     border-radius: 6px;
     box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.1);
@@ -24,14 +34,11 @@
     font-size: 0.7rem;
 }
 
-.feed-content {
-    display: flex;
-    flex-direction: column;
-    flex-grow: 1;
-    overflow-y: auto;
-    padding: 5px;
-    gap: 15px;
+
+.liked {
+    color: red;
 }
+
 
 .post-composer {
     display: flex;
@@ -67,12 +74,57 @@
     display: flex;
     margin-top: 0.5rem;
     gap: 15px;
+    border-top: .4px solid #b6b6b636;
+    padding: 5px;
 }
 
 .like-btn,
 .share-btn {
     color: #707070 !important;
-    font-size: 0.75rem;
+    font-size: 0.8rem;
+}
+
+.like-btn {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 5px;
+    border-radius: 3px;
+    padding: 0 10px;
+}
+
+.like-btn:hover {
+    cursor: pointer;
+    background: #cecece69;
+}
+
+.like-btn :is(i) {
+    margin-top: 3px;
+    font-size: 1.2rem;
+}
+
+.user {
+    display: flex;
+    flex-direction: row;
+    padding: 0.75rem 1rem;
+    font-weight: 500;
+    align-items: flex-start;
+    text-decoration: none;
+    color: #707070;
+    justify-content: space-between;
+    
+}
+
+.user-left {
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+}
+
+.user-info{
+    display: flex;
+    flex-direction: column;
 }
 
 .composer-content {
@@ -149,9 +201,9 @@
 }
 
 @media (max-width: 768px) {
-   .feed-content {
-    padding: 0;
-   }
+    .feed-content {
+        padding: 20px 20px;
+    }
 }
 
 /* Dispositivos Móveis Pequenos (até 480px) */
