--- a/src/app/components/mainlayout/mainlayout.component.css
+++ b/src/app/components/mainlayout/mainlayout.component.css
@@ -1,6 +1,6 @@
 * {
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     line-height: 1.5;
+    background: #fafbff;
 }
 
 .options--item.active {
@@ -49,7 +49,7 @@
     box-sizing: border-box;
     overflow-y: auto;
     height: calc(100vh - 66px);
-    padding: 20px;
+    padding: 20px 250px;
 }
 
 .main__header {
@@ -74,11 +74,9 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        background-color: white;
     }
 
     .notification-btn:hover {
-        background-color: white;
         color: var(--primary-color);
     }
 }
@@ -233,7 +231,6 @@
         margin: 0;
         padding: 0;
         box-sizing: border-box;
-        font-family: 'Poppins', sans-serif;
         scrollbar-width: none;
         outline: none;
     }
@@ -326,7 +323,6 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        background-color: white;
     }
 
     .btn--small {
@@ -406,7 +402,6 @@
         transition-delay: 0s, 0s, 0s;
         overflow-y: scroll;
         box-shadow: 0px 7px 17px 10px #121217;
-        padding: 15px 15px;
     }
 
     .menu-open__main {
@@ -430,8 +425,8 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
-        border-bottom: 1px solid #cacaca;
-        padding: 10px 0;
+        border-bottom: .5px solid #cacaca7a;
+        padding: 10px 10px;
 
         :is(h1) {
             margin: 0;
@@ -483,8 +478,7 @@
 
     .main :is(section) {
         padding: 0px;
-        height: calc(100vh - 100px);
-        padding: 20px 0;
+        height: calc(100vh - 66px);
     }
 
     .options {
