--- a/src/app/components/pets/pets.component.css
+++ b/src/app/components/pets/pets.component.css
@@ -1,13 +1,12 @@
 .content {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
     gap: 15px;
 }
 
 
 .card-pet {
-    width: calc(50% - 15px);
+    width: calc(33.33% - 15px);
     border-radius: 10px;
     overflow: hidden;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
@@ -130,6 +129,13 @@
 
 @media (max-width: 540px) {
 
+    .content {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        gap: 15px;
+    }
+
     .add-btn {
         position: fixed;
         font-size: 20px;
@@ -171,6 +177,7 @@
         flex-direction: column;
         align-items: center;
         gap: 10px;
+        width: calc(50% - 15px);
 
         :is(h6) {
             font-size: 16px;
