--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -17,6 +17,30 @@
     box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.1);
 }
 
+.title-header {
+    width: 100%;
+    text-align: center;
+}
+
+.post-flex {
+    display: flex;
+    flex-direction: row;
+}
+
+.image-preview {
+    margin-top: 10px;
+    /* Espaçamento acima da imagem */
+}
+
+.preview-img {
+    max-width: 100%;
+    /* Limita a largura da imagem ao contêiner */
+    max-height: 300px;
+    /* Limita a altura da imagem */
+    border-radius: 4px;
+    /* Bordas arredondadas */
+}
+
 .avatar {
     flex-shrink: 0;
     width: 2.5rem;
@@ -42,6 +66,7 @@
 
 .post-composer {
     display: flex;
+    flex-direction: column;
     width: 100%;
     padding: 1rem;
     background: white;
@@ -50,7 +75,7 @@
 }
 
 .post-time {
-    font-size: 9.5px;
+    font-size: .75rem;
     color: #4a5568;
 }
 
@@ -67,7 +92,7 @@
 
 .post-image {
     height: auto;
-    max-width: 700px;
+    width: 100%;
 }
 
 .post-actions {
@@ -75,7 +100,7 @@
     margin-top: 0.5rem;
     gap: 15px;
     border-top: .4px solid #b6b6b636;
-    padding: 5px;
+    padding-top: 5px;
 }
 
 .like-btn,
@@ -113,7 +138,7 @@
     text-decoration: none;
     color: #707070;
     justify-content: space-between;
-    
+
 }
 
 .user-left {
@@ -122,7 +147,7 @@
     gap: 10px;
 }
 
-.user-info{
+.user-info {
     display: flex;
     flex-direction: column;
 }
@@ -149,6 +174,7 @@
     display: flex;
     justify-content: flex-end;
     margin-top: 0.5rem;
+    gap: 5px;
 }
 
 .attach-btn,
@@ -165,6 +191,11 @@
 
 .attach-btn:hover {
     background-color: #c0e4ff;
+}
+
+.post-btn .bx {
+    font-size: 1.4rem;
+    margin-top: 5px;
 }
 
 .post-btn {
@@ -189,7 +220,7 @@
     display: flex;
     flex-direction: column;
     flex-grow: 1;
-    margin-left: 1rem;
+    padding: 0 16px;
 }
 
 .post-header {
@@ -209,8 +240,8 @@
 /* Dispositivos Móveis Pequenos (até 480px) */
 @media (max-width: 480px) {
     .post-image {
-        height: 150px;
-        max-width: 400px;
+        height: auto;
+        width: 100%;
     }
 }
 
